--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,11 @@
             vertical-align: top;
             padding: 20px;
            }
-           .lesson li{margin-bottom: 10px;}
+           .lesson li{
+            margin-bottom: 10px;}
+            .lesson li a{
+              display: block;
+            }
         footer{
           line-height: 50px;
           background-color: #555;
