--- a/maket.story/css/style.css
+++ b/maket.story/css/style.css
@@ -236,9 +236,11 @@
          	line-height: 40px;
          	text-transform: uppercase;
             box-shadow: 0 0 10px rgba(0,0,0,0.5); 
+            transition: all 0.5s;
           
          }
          .button a{
+         	display: block;
          	color: white;
          	font-size: 15px;
          	text-decoration: none;
