--- a/maket2/style.css
+++ b/maket2/style.css
@@ -23,16 +23,18 @@
 			margin-bottom: 60px; 
 		}
 		header nav a{
+			display: inline-block;
 			font-size: 24px;
 			margin-left: 20px;
 			text-decoration: none;
 			color: #000;
 			text-transform: uppercase;
-
+			  transition:transform 0.2s;
 		}
 		header nav a:hover{
-			 font-weight: bold;
+		     font-weight: bold;
 			 border-bottom: 2px solid #000;
+			 transform: scale(1.1);
 		}
 		 
 		.aboutme h1{
@@ -280,7 +282,12 @@
 
 		}
 		.contacts a{
+			display: inline-block;
 			color: white;
+			transition: transform 0.3s;
+		}
+		.contacts a:hover{
+			transform: scale(1.1);
 		}
 		.end{
 			color: white;
